--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ets2_environments
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 0.0.2
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -34,5 +34,6 @@ flutter:
     - assets/sxc/addons/packer/
     - assets/sxc/addons/packer/img/
     - assets/sxc/addons/pathfinder/
+    - assets/sii_decrypt/
 
 
