--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ets2_environments
 description: "Uma forma fácil de separar ambientes para rodar mods diferentes em perfis diferentes no Euro Truck Simulator 2 [windows]"
 publish_to: 'none'
-version: 0.0.3
+version: 0.0.4
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -18,6 +18,7 @@ dependencies:
   url_launcher: ^6.2.3
   flex_color_scheme: ^7.3.1
   google_fonts: ^6.1.0
+  ffi: ^2.1.0
 
 dev_dependencies:
   flutter_test:
