--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  filesystem_picker: ^4.1.0
+  ffi: ^2.1.0
+  filepicker_windows: ^2.0.11
+  flex_color_scheme: ^7.3.1
+  google_fonts: ^6.1.0
+  get_it: ^7.6.6
   path: ^1.8.3
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
-  get_it: ^7.6.6
   url_launcher: ^6.2.3
-  flex_color_scheme: ^7.3.1
-  google_fonts: ^6.1.0
-  ffi: ^2.1.0
 
 dev_dependencies:
   flutter_test:
