--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,15 @@ dependencies:
   ffi: ^2.1.0
   filepicker_windows: ^2.0.11
   flex_color_scheme: ^7.3.1
+  fluent_ui: ^4.8.5
   google_fonts: ^6.1.0
   get_it: ^7.6.6
   path: ^1.8.3
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.3
+  tray_manager: ^0.2.1
+  window_manager: ^0.3.7
 
 dev_dependencies:
   flutter_test:
